tests/diagnostics/catalog/snapshots/ir/IR0027.snap
error[IR0027]: IR_E_INVALID_BLOCK
 --> tests/diagnostics/catalog/sources/ir/IR0027.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0027
  = help: keep IR validation diagnostics structured and catalog-backed
